Colaboratory を使用して作成しました

--- a/arabic01.ipynb
+++ b/arabic01.ipynb
@@ -6,7 +6,7 @@
       "name": "arabic01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMaL78TvtGRIA9B2fS3iUPR",
+      "authorship_tag": "ABX9TyN5VQWj5q++CB+FXOcH8pjm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1596,12 +1596,12 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "RPj8rtuPbRzM",
-        "outputId": "42520b5a-aa44-4fdb-abd3-d0df2effb0c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
-        }
+        },
+        "id": "RPj8rtuPbRzM",
+        "outputId": "42520b5a-aa44-4fdb-abd3-d0df2effb0c5"
       },
       "source": [
         "#@title\r\n",
@@ -1829,12 +1829,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HazZJXY8c4OZ",
-        "outputId": "3223c37c-7d61-4644-a247-fbf848aaeb67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "HazZJXY8c4OZ",
+        "outputId": "3223c37c-7d61-4644-a247-fbf848aaeb67"
       },
       "source": [
         "#@title\r\n",
@@ -1992,6 +1992,468 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GHg4jhqVdmQS"
+      },
+      "source": [
+        "冠詞や語形変化による単数複数の区別がない。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lu4biWK4dzFh",
+        "outputId": "b2efc0dc-c7a2-4ac4-8bb9-4791871ba1b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "#@title\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    table {\r\n",
+        "        border-collapse: collapse;\r\n",
+        "        border: 2px solid rgb(200, 200, 200);\r\n",
+        "        letter-spacing: 1px;\r\n",
+        "        margin: auto;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    td,\r\n",
+        "    th {\r\n",
+        "        border: 1px solid rgb(190, 190, 190);\r\n",
+        "        padding: 10px 20px;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(even) td {\r\n",
+        "        background-color: rgb(250, 250, 250);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(odd) td {\r\n",
+        "        background-color: rgb(245, 245, 245);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr td:nth-child(3) {\r\n",
+        "        color: red;\r\n",
+        "        font-size: 300%;\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div id=\"maintable\"></div>\r\n",
+        "\r\n",
+        "<script>\r\n",
+        "    var json = [\r\n",
+        "        {\r\n",
+        "            \"latin\": \"bait\",\r\n",
+        "            \"kana\": \"バイト\",\r\n",
+        "            \"arabic\": \"بَيت\",\r\n",
+        "            \"meaning\": \"house / a house\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"jaakiit\",\r\n",
+        "            \"kana\": \"ジャーキート\",\r\n",
+        "            \"arabic\": \"جاكيت\",\r\n",
+        "            \"meaning\": \"jacket / a jacket\"\r\n",
+        "        },\r\n",
+        "    ];\r\n",
+        "    var table = document.createElement(\"table\");\r\n",
+        "    // table header\r\n",
+        "    var tr = document.createElement(\"tr\");\r\n",
+        "    for (key in json[0]) {\r\n",
+        "        var th = document.createElement(\"th\");\r\n",
+        "        th.textContent = key;\r\n",
+        "        tr.appendChild(th);\r\n",
+        "    }\r\n",
+        "    table.appendChild(tr);\r\n",
+        "\r\n",
+        "    // table content\r\n",
+        "    for (var i = 0; i < json.length; i++) {\r\n",
+        "        var tr = document.createElement(\"tr\");\r\n",
+        "        for (key in json[0]) {\r\n",
+        "            var td = document.createElement(\"td\");\r\n",
+        "            td.textContent = json[i][key];\r\n",
+        "            tr.appendChild(td);\r\n",
+        "        }\r\n",
+        "        table.appendChild(tr);\r\n",
+        "    }\r\n",
+        "    // add table to maintable\r\n",
+        "    document.getElementById(\"maintable\").appendChild(table);\r\n",
+        "</script>"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    table {\n",
+              "        border-collapse: collapse;\n",
+              "        border: 2px solid rgb(200, 200, 200);\n",
+              "        letter-spacing: 1px;\n",
+              "        margin: auto;\n",
+              "    }\n",
+              "\n",
+              "    td,\n",
+              "    th {\n",
+              "        border: 1px solid rgb(190, 190, 190);\n",
+              "        padding: 10px 20px;\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(even) td {\n",
+              "        background-color: rgb(250, 250, 250);\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(odd) td {\n",
+              "        background-color: rgb(245, 245, 245);\n",
+              "    }\n",
+              "\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        font-size: 300%;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div id=\"maintable\"></div>\n",
+              "\n",
+              "<script>\n",
+              "    var json = [\n",
+              "        {\n",
+              "            \"latin\": \"bait\",\n",
+              "            \"kana\": \"バイト\",\n",
+              "            \"arabic\": \"بَيت\",\n",
+              "            \"meaning\": \"house / a house\"\n",
+              "        },\n",
+              "        {\n",
+              "            \"latin\": \"jaakiit\",\n",
+              "            \"kana\": \"ジャーキート\",\n",
+              "            \"arabic\": \"جاكيت\",\n",
+              "            \"meaning\": \"jacket / a jacket\"\n",
+              "        },\n",
+              "    ];\n",
+              "    var table = document.createElement(\"table\");\n",
+              "    // table header\n",
+              "    var tr = document.createElement(\"tr\");\n",
+              "    for (key in json[0]) {\n",
+              "        var th = document.createElement(\"th\");\n",
+              "        th.textContent = key;\n",
+              "        tr.appendChild(th);\n",
+              "    }\n",
+              "    table.appendChild(tr);\n",
+              "\n",
+              "    // table content\n",
+              "    for (var i = 0; i < json.length; i++) {\n",
+              "        var tr = document.createElement(\"tr\");\n",
+              "        for (key in json[0]) {\n",
+              "            var td = document.createElement(\"td\");\n",
+              "            td.textContent = json[i][key];\n",
+              "            tr.appendChild(td);\n",
+              "        }\n",
+              "        table.appendChild(tr);\n",
+              "    }\n",
+              "    // add table to maintable\n",
+              "    document.getElementById(\"maintable\").appendChild(table);\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lEHmy8IBd0sA"
+      },
+      "source": [
+        "形容詞は名詞の後に来る。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A7U_VdB_eheY",
+        "outputId": "ab9bed5e-7402-457c-b00c-87ebc558e1fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 256
+        }
+      },
+      "source": [
+        "#@title\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    table {\r\n",
+        "        border-collapse: collapse;\r\n",
+        "        border: 2px solid rgb(200, 200, 200);\r\n",
+        "        letter-spacing: 1px;\r\n",
+        "        margin: auto;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    td,\r\n",
+        "    th {\r\n",
+        "        border: 1px solid rgb(190, 190, 190);\r\n",
+        "        padding: 10px 20px;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(even) td {\r\n",
+        "        background-color: rgb(250, 250, 250);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(odd) td {\r\n",
+        "        background-color: rgb(245, 245, 245);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr td:nth-child(3) {\r\n",
+        "        color: red;\r\n",
+        "        font-size: 300%;\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div id=\"maintable\"></div>\r\n",
+        "\r\n",
+        "<script>\r\n",
+        "    var json = [\r\n",
+        "        {\r\n",
+        "            \"latin\": \"jakiit jadiid\",\r\n",
+        "            \"kana\": \"ジャキート ジャディード\",\r\n",
+        "            \"arabic\": \"جاكيت جديد\",\r\n",
+        "            \"meaning\": \"a new jacket (literally:\\\"a jacket new\\\")\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"baab kabiir\",\r\n",
+        "            \"kana\": \"バーブ カビーる\",\r\n",
+        "            \"arabic\": \"باب كَبير\",\r\n",
+        "            \"meaning\": \"a big door (literally:\\\"a door big\\\")\"\r\n",
+        "        },\r\n",
+        "    ];\r\n",
+        "    var table = document.createElement(\"table\");\r\n",
+        "    // table header\r\n",
+        "    var tr = document.createElement(\"tr\");\r\n",
+        "    for (key in json[0]) {\r\n",
+        "        var th = document.createElement(\"th\");\r\n",
+        "        th.textContent = key;\r\n",
+        "        tr.appendChild(th);\r\n",
+        "    }\r\n",
+        "    table.appendChild(tr);\r\n",
+        "\r\n",
+        "    // table content\r\n",
+        "    for (var i = 0; i < json.length; i++) {\r\n",
+        "        var tr = document.createElement(\"tr\");\r\n",
+        "        for (key in json[0]) {\r\n",
+        "            var td = document.createElement(\"td\");\r\n",
+        "            td.textContent = json[i][key];\r\n",
+        "            tr.appendChild(td);\r\n",
+        "        }\r\n",
+        "        table.appendChild(tr);\r\n",
+        "    }\r\n",
+        "    // add table to maintable\r\n",
+        "    document.getElementById(\"maintable\").appendChild(table);\r\n",
+        "</script>"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    table {\n",
+              "        border-collapse: collapse;\n",
+              "        border: 2px solid rgb(200, 200, 200);\n",
+              "        letter-spacing: 1px;\n",
+              "        margin: auto;\n",
+              "    }\n",
+              "\n",
+              "    td,\n",
+              "    th {\n",
+              "        border: 1px solid rgb(190, 190, 190);\n",
+              "        padding: 10px 20px;\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(even) td {\n",
+              "        background-color: rgb(250, 250, 250);\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(odd) td {\n",
+              "        background-color: rgb(245, 245, 245);\n",
+              "    }\n",
+              "\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        font-size: 300%;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div id=\"maintable\"></div>\n",
+              "\n",
+              "<script>\n",
+              "    var json = [\n",
+              "        {\n",
+              "            \"latin\": \"jakiit jadiid\",\n",
+              "            \"kana\": \"ジャキート ジャディード\",\n",
+              "            \"arabic\": \"جاكيت جديد\",\n",
+              "            \"meaning\": \"a new jacket (literally:\\\"a jacket new\\\")\"\n",
+              "        },\n",
+              "        {\n",
+              "            \"latin\": \"baab kabiir\",\n",
+              "            \"kana\": \"バーブ カビーる\",\n",
+              "            \"arabic\": \"باب كَبير\",\n",
+              "            \"meaning\": \"a big door (literally:\\\"a door big\\\")\"\n",
+              "        },\n",
+              "    ];\n",
+              "    var table = document.createElement(\"table\");\n",
+              "    // table header\n",
+              "    var tr = document.createElement(\"tr\");\n",
+              "    for (key in json[0]) {\n",
+              "        var th = document.createElement(\"th\");\n",
+              "        th.textContent = key;\n",
+              "        tr.appendChild(th);\n",
+              "    }\n",
+              "    table.appendChild(tr);\n",
+              "\n",
+              "    // table content\n",
+              "    for (var i = 0; i < json.length; i++) {\n",
+              "        var tr = document.createElement(\"tr\");\n",
+              "        for (key in json[0]) {\n",
+              "            var td = document.createElement(\"td\");\n",
+              "            td.textContent = json[i][key];\n",
+              "            tr.appendChild(td);\n",
+              "        }\n",
+              "        table.appendChild(tr);\n",
+              "    }\n",
+              "    // add table to maintable\n",
+              "    document.getElementById(\"maintable\").appendChild(table);\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AE9yxBAZgSyN"
+      },
+      "source": [
+        "# Descriptions 1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_62Iw_Xfg2Pj"
+      },
+      "source": [
+        "促音のような子音を重ねて発音する記号。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nDd1hgq4hAFL"
+      },
+      "source": [
+        "#@title\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    table {\r\n",
+        "        border-collapse: collapse;\r\n",
+        "        border: 2px solid rgb(200, 200, 200);\r\n",
+        "        letter-spacing: 1px;\r\n",
+        "        margin: auto;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    td,\r\n",
+        "    th {\r\n",
+        "        border: 1px solid rgb(190, 190, 190);\r\n",
+        "        padding: 10px 20px;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(even) td {\r\n",
+        "        background-color: rgb(250, 250, 250);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(odd) td {\r\n",
+        "        background-color: rgb(245, 245, 245);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr td:nth-child(3) {\r\n",
+        "        color: red;\r\n",
+        "        font-size: 300%;\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div id=\"maintable\"></div>\r\n",
+        "\r\n",
+        "<script>\r\n",
+        "    var json = [\r\n",
+        "        {\r\n",
+        "            \"latin\": \"daras\",\r\n",
+        "            \"kana\": \"\",\r\n",
+        "            \"arabic\": \"دَرَس\",\r\n",
+        "            \"meaning\": \"he studied\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"darras\",\r\n",
+        "            \"kana\": \"\",\r\n",
+        "            \"arabic\": \"دَرَّس\",\r\n",
+        "            \"meaning\": \"he taught\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"Hamaam\",\r\n",
+        "            \"kana\": \"\",\r\n",
+        "            \"arabic\": \"حَمام\",\r\n",
+        "            \"meaning\": \"pigeons\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"Hammaam\",\r\n",
+        "            \"kana\": \"\",\r\n",
+        "            \"arabic\": \"حَمّام\",\r\n",
+        "            \"meaning\": \"bathroom\"\r\n",
+        "        },\r\n",
+        "    ];\r\n",
+        "    var table = document.createElement(\"table\");\r\n",
+        "    // table header\r\n",
+        "    var tr = document.createElement(\"tr\");\r\n",
+        "    for (key in json[0]) {\r\n",
+        "        var th = document.createElement(\"th\");\r\n",
+        "        th.textContent = key;\r\n",
+        "        tr.appendChild(th);\r\n",
+        "    }\r\n",
+        "    table.appendChild(tr);\r\n",
+        "\r\n",
+        "    // table content\r\n",
+        "    for (var i = 0; i < json.length; i++) {\r\n",
+        "        var tr = document.createElement(\"tr\");\r\n",
+        "        for (key in json[0]) {\r\n",
+        "            var td = document.createElement(\"td\");\r\n",
+        "            td.textContent = json[i][key];\r\n",
+        "            tr.appendChild(td);\r\n",
+        "        }\r\n",
+        "        table.appendChild(tr);\r\n",
+        "    }\r\n",
+        "    // add table to maintable\r\n",
+        "    document.getElementById(\"maintable\").appendChild(table);\r\n",
+        "</script>"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
