Colaboratory を使用して作成しました

--- a/arabic01.ipynb
+++ b/arabic01.ipynb
@@ -4506,13 +4506,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "ZEo-qJdguZvd",
-        "outputId": "435be843-463e-46cd-af93-5a9c8c16ec09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 416
-        }
+        },
+        "cellView": "form",
+        "id": "ZEo-qJdguZvd",
+        "outputId": "435be843-463e-46cd-af93-5a9c8c16ec09"
       },
       "source": [
         "#@title\r\n",
@@ -4711,12 +4711,12 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "Zr-WohFKyvok",
-        "outputId": "ed50c1c6-62bc-4e8e-b63e-3a21c1f140dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
-        }
+        },
+        "id": "Zr-WohFKyvok",
+        "outputId": "ed50c1c6-62bc-4e8e-b63e-3a21c1f140dd"
       },
       "source": [
         "#@title\r\n",
@@ -4827,6 +4827,206 @@
               "            \"kana\": \"ハル\",\n",
               "            \"arabic\": \"هَل\",\n",
               "            \"meaning\": \"文頭につけて疑問文にする\"\n",
+              "        },\n",
+              "    ];\n",
+              "    var table = document.createElement(\"table\");\n",
+              "    // table header\n",
+              "    var tr = document.createElement(\"tr\");\n",
+              "    for (key in json[0]) {\n",
+              "        var th = document.createElement(\"th\");\n",
+              "        th.textContent = key;\n",
+              "        tr.appendChild(th);\n",
+              "    }\n",
+              "    table.appendChild(tr);\n",
+              "\n",
+              "    // table content\n",
+              "    for (var i = 0; i < json.length; i++) {\n",
+              "        var tr = document.createElement(\"tr\");\n",
+              "        for (key in json[0]) {\n",
+              "            var td = document.createElement(\"td\");\n",
+              "            td.textContent = json[i][key];\n",
+              "            tr.appendChild(td);\n",
+              "        }\n",
+              "        table.appendChild(tr);\n",
+              "    }\n",
+              "    // add table to maintable\n",
+              "    document.getElementById(\"maintable\").appendChild(table);\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h76jmuw3zl8A"
+      },
+      "source": [
+        "# University"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CqJ7s5mFzoSF",
+        "outputId": "7d10cd0e-5dca-4ae9-d859-776257aa516d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 344
+        }
+      },
+      "source": [
+        "#@title\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    table {\r\n",
+        "        border-collapse: collapse;\r\n",
+        "        border: 2px solid rgb(200, 200, 200);\r\n",
+        "        letter-spacing: 1px;\r\n",
+        "        margin: auto;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    td,\r\n",
+        "    th {\r\n",
+        "        border: 1px solid rgb(190, 190, 190);\r\n",
+        "        padding: 10px 20px;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(even) td {\r\n",
+        "        background-color: rgb(250, 250, 250);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr:nth-child(odd) td {\r\n",
+        "        background-color: rgb(245, 245, 245);\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    tr td:nth-child(3) {\r\n",
+        "        color: red;\r\n",
+        "        font-size: 300%;\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div id=\"maintable\"></div>\r\n",
+        "\r\n",
+        "<script>\r\n",
+        "    var json = [\r\n",
+        "        {\r\n",
+        "            \"latin\": \"balid 3arabiiyy\",\r\n",
+        "            \"kana\": \"バリド あアらビーイ\",\r\n",
+        "            \"arabic\": \"بَلَد عَرَبِيّ\",\r\n",
+        "            \"meaning\": \"an Arab country\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"madiina 3arabi-yya\",\r\n",
+        "            \"kana\": \"マディーナ あアらビーヤ\",\r\n",
+        "            \"arabic\": \"مَدينة عَرَبِيّة\",\r\n",
+        "            \"meaning\": \"an Arab city\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"bayt jadiid\",\r\n",
+        "            \"kana\": \"バイト ジャディード\",\r\n",
+        "            \"arabic\": \"بَيْت جَديد\",\r\n",
+        "            \"meaning\": \"a new house\"\r\n",
+        "        },\r\n",
+        "        {\r\n",
+        "            \"latin\": \"jaami3a jadiida\",\r\n",
+        "            \"kana\": \"ジャーミあア ジャディーダ\",\r\n",
+        "            \"arabic\": \"جامِعة جَديدة\",\r\n",
+        "            \"meaning\": \"a new university\"\r\n",
+        "        },\r\n",
+        "    ];\r\n",
+        "    var table = document.createElement(\"table\");\r\n",
+        "    // table header\r\n",
+        "    var tr = document.createElement(\"tr\");\r\n",
+        "    for (key in json[0]) {\r\n",
+        "        var th = document.createElement(\"th\");\r\n",
+        "        th.textContent = key;\r\n",
+        "        tr.appendChild(th);\r\n",
+        "    }\r\n",
+        "    table.appendChild(tr);\r\n",
+        "\r\n",
+        "    // table content\r\n",
+        "    for (var i = 0; i < json.length; i++) {\r\n",
+        "        var tr = document.createElement(\"tr\");\r\n",
+        "        for (key in json[0]) {\r\n",
+        "            var td = document.createElement(\"td\");\r\n",
+        "            td.textContent = json[i][key];\r\n",
+        "            tr.appendChild(td);\r\n",
+        "        }\r\n",
+        "        table.appendChild(tr);\r\n",
+        "    }\r\n",
+        "    // add table to maintable\r\n",
+        "    document.getElementById(\"maintable\").appendChild(table);\r\n",
+        "</script>"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    table {\n",
+              "        border-collapse: collapse;\n",
+              "        border: 2px solid rgb(200, 200, 200);\n",
+              "        letter-spacing: 1px;\n",
+              "        margin: auto;\n",
+              "    }\n",
+              "\n",
+              "    td,\n",
+              "    th {\n",
+              "        border: 1px solid rgb(190, 190, 190);\n",
+              "        padding: 10px 20px;\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(even) td {\n",
+              "        background-color: rgb(250, 250, 250);\n",
+              "    }\n",
+              "\n",
+              "    tr:nth-child(odd) td {\n",
+              "        background-color: rgb(245, 245, 245);\n",
+              "    }\n",
+              "\n",
+              "    tr td:nth-child(3) {\n",
+              "        color: red;\n",
+              "        font-size: 300%;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div id=\"maintable\"></div>\n",
+              "\n",
+              "<script>\n",
+              "    var json = [\n",
+              "        {\n",
+              "            \"latin\": \"balid 3arabiiyy\",\n",
+              "            \"kana\": \"バリド あアらビーイ\",\n",
+              "            \"arabic\": \"بَلَد عَرَبِيّ\",\n",
+              "            \"meaning\": \"an Arab country\"\n",
+              "        },\n",
+              "        {\n",
+              "            \"latin\": \"madiina 3arabi-yya\",\n",
+              "            \"kana\": \"マディーナ あアらビーヤ\",\n",
+              "            \"arabic\": \"مَدينة عَرَبِيّة\",\n",
+              "            \"meaning\": \"an Arab city\"\n",
+              "        },\n",
+              "        {\n",
+              "            \"latin\": \"bayt jadiid\",\n",
+              "            \"kana\": \"バイト ジャディード\",\n",
+              "            \"arabic\": \"بَيْت جَديد\",\n",
+              "            \"meaning\": \"a new house\"\n",
+              "        },\n",
+              "        {\n",
+              "            \"latin\": \"jaami3a jadiida\",\n",
+              "            \"kana\": \"ジャーミあア ジャディーダ\",\n",
+              "            \"arabic\": \"جامِعة جَديدة\",\n",
+              "            \"meaning\": \"a new university\"\n",
               "        },\n",
               "    ];\n",
               "    var table = document.createElement(\"table\");\n",
